modify login page

--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
             <input type="text" class="log-in__input" placeholder="phone, email, or username" required>
             <input type="password" class="log-in__input" placeholder="password" required>
             <input type="submit" class="log-in__btn" value="log in">
-            <a href="#" class="log-in__link">forget password? .</a>
+            <a href="#" class="log-in__link">forget password?</a>
             <a href="#" class="log-in__link">sign up for twitter</a>
         </form>
     </main>
