--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <i class="main__icon ion-social-twitter"></i>
                 <h1 class="heading__1">see what's happening in the world right now</h1>
                 <p class="main__text">Join Twitter today.</p>
-                <a href="#" class="btn__sign-up">sign up</a>
+                <a href="sign-up.html" class="btn__sign-up">sign up</a>
                 <a href="login.html" class="btn__login">log in</a>
             </div>
         </div>
