--- a/login.html
+++ b/login.html
@@ -10,15 +10,17 @@
 </head>
 <body>
     <main class="log-in">
-        <i class="log-in__icon ion-social-twitter"></i>
-        <h2 class="log-in__heading">Log in to Twitter</h2>
-        <form action="#" class="log-in__form">
-            <input type="text" class="log-in__input" placeholder="phone, email, or username" required>
-            <input type="password" class="log-in__input" placeholder="password" required>
-            <input type="submit" class="log-in__btn" value="log in">
-            <a href="#" class="log-in__link">forget password?</a>
-            <a href="#" class="log-in__link">sign up for twitter</a>
-        </form>
+        <div class="log-in__container">
+            <i class="log-in__icon ion-social-twitter"></i>
+            <h2 class="log-in__heading">Log in to Twitter</h2>
+            <form action="#" class="log-in__form">
+                <input type="text" class="log-in__input" placeholder="phone, email, or username" required>
+                <input type="password" class="log-in__input" placeholder="password" required>
+                <input type="submit" class="log-in__btn" value="log in">
+                <a href="#" class="log-in__link">forget password?</a>
+                <a href="#" class="log-in__link">sign up for twitter</a>
+            </form>
+        </div>
     </main>
 </body>
 </html>
